--- a/index.html
+++ b/index.html
@@ -647,26 +647,168 @@ async function exportMask() {
 function closeModal() { document.getElementById('modal').classList.remove('open'); }
 
 /* ═══════════════════════
-   SVG → Image (snapshot)
+   วาดหน้ากากลง Canvas โดยตรง (ไม่พึ่ง SVG→Image)
+   หลีกเลี่ยง btoa/CORS/Thai-char issue ทั้งหมด
+═══════════════════════ */
+function drawMaskToCanvas(size=600) {
+  const c = document.createElement('canvas');
+  c.width = c.height = size;
+  const ctx = c.getContext('2d');
+  const s = size / 400; // scale factor (SVG viewBox = 400x400)
+
+  const col = maskState.colors;
+  const sc  = n => n * s; // scale coordinate
+
+  ctx.save();
+  ctx.scale(s, s);
+
+  // shadow drop (เงา)
+  ctx.save();
+  ctx.shadowColor = 'rgba(0,0,0,0.6)';
+  ctx.shadowBlur  = 20;
+  ctx.shadowOffsetX = 8; ctx.shadowOffsetY = 8;
+
+  // ── มงกุฎ ──
+  if (maskState.crown !== 'none') {
+    ctx.fillStyle = col.crown;
+    ctx.beginPath();
+    if (maskState.crown === 'spike') {
+      ctx.moveTo(200,10); ctx.lineTo(220,85); ctx.lineTo(180,85); ctx.closePath();
+    } else {
+      ctx.moveTo(200,30);
+      ctx.bezierCurveTo(230,40, 235,65, 200,85);
+      ctx.bezierCurveTo(165,65, 170,40, 200,30);
+    }
+    ctx.fill();
+    // ฐานมงกุฎ
+    ctx.beginPath();
+    ctx.moveTo(140,80); ctx.lineTo(260,80); ctx.lineTo(250,130); ctx.lineTo(150,130); ctx.closePath();
+    ctx.fill();
+    ctx.restore(); ctx.save();
+    // อัญมณี
+    ctx.fillStyle = col.gem;
+    ctx.shadowColor='rgba(0,0,0,0.4)'; ctx.shadowBlur=6;
+    ctx.beginPath();
+    const gemY = maskState.crown === 'spike' ? 105 : 105;
+    ctx.arc(200, gemY, 7, 0, Math.PI*2); ctx.fill();
+    ctx.strokeStyle='#fff'; ctx.lineWidth=1; ctx.stroke();
+  }
+  ctx.restore();
+
+  // ── ใบหน้า ──
+  ctx.fillStyle = col.skin;
+  ctx.beginPath();
+  ctx.moveTo(120,130);
+  ctx.bezierCurveTo(100,180, 100,220, 100,240);
+  ctx.bezierCurveTo(100,320, 160,360, 200,360);
+  ctx.bezierCurveTo(240,360, 300,320, 300,240);
+  ctx.bezierCurveTo(300,220, 300,180, 280,130);
+  ctx.closePath(); ctx.fill();
+
+  // ── หู ──
+  ctx.fillStyle = col.skin;
+  ctx.beginPath(); // ซ้าย
+  ctx.moveTo(100,200); ctx.bezierCurveTo(80,200, 70,240, 90,260);
+  ctx.quadraticCurveTo(100,240, 100,220); ctx.fill();
+  ctx.beginPath(); // ขวา
+  ctx.moveTo(300,200); ctx.bezierCurveTo(320,200, 330,240, 310,260);
+  ctx.quadraticCurveTo(300,240, 300,220); ctx.fill();
+
+  // ── ลวดลาย ──
+  if (maskState.pattern !== 'none') {
+    ctx.strokeStyle = col.line; ctx.lineWidth = 2; ctx.lineCap = 'round';
+    ctx.beginPath();
+    if (maskState.pattern === 'basic') {
+      ctx.moveTo(130,260); ctx.quadraticCurveTo(150,270,150,290);
+      ctx.moveTo(270,260); ctx.quadraticCurveTo(250,270,250,290);
+      ctx.moveTo(190,350); ctx.quadraticCurveTo(200,330,210,350);
+    } else if (maskState.pattern === 'kanok') {
+      ctx.moveTo(120,240); ctx.quadraticCurveTo(140,230,150,250);
+      ctx.quadraticCurveTo(155,265,160,270);
+      ctx.moveTo(280,240); ctx.quadraticCurveTo(260,230,250,250);
+      ctx.quadraticCurveTo(245,265,240,270);
+      ctx.moveTo(180,150); ctx.quadraticCurveTo(200,140,220,150);
+    } else if (maskState.pattern === 'royal') {
+      ctx.moveTo(110,230); ctx.bezierCurveTo(130,210, 150,235, 160,240);
+      ctx.bezierCurveTo(170,250, 175,270, 180,280);
+      ctx.moveTo(290,230); ctx.bezierCurveTo(270,210, 250,235, 240,240);
+      ctx.bezierCurveTo(230,250, 225,270, 220,280);
+      ctx.moveTo(200,140); ctx.lineTo(200,180);
+      ctx.moveTo(185,160); ctx.lineTo(215,160);
+      ctx.arc(200,160, 3, 0, Math.PI*2);
+    }
+    ctx.stroke();
+  }
+
+  // ── คิ้ว ──
+  ctx.strokeStyle = '#000'; ctx.lineWidth = 3; ctx.lineCap = 'round';
+  ctx.beginPath();
+  ctx.moveTo(135,200); ctx.quadraticCurveTo(165,160, 190,205); ctx.stroke();
+  ctx.beginPath();
+  ctx.moveTo(210,205); ctx.quadraticCurveTo(235,160, 265,200); ctx.stroke();
+
+  // ── ตา ──
+  ctx.fillStyle = 'white';
+  if (maskState.eye === 'wide') {
+    ctx.beginPath();
+    ctx.moveTo(135,210); ctx.quadraticCurveTo(165,180, 190,215);
+    ctx.lineTo(190,225); ctx.quadraticCurveTo(165,240, 135,210); ctx.fill();
+    ctx.strokeStyle='#000'; ctx.lineWidth=1.5; ctx.stroke();
+    ctx.beginPath();
+    ctx.moveTo(210,215); ctx.quadraticCurveTo(235,180, 265,210);
+    ctx.lineTo(265,210); ctx.quadraticCurveTo(235,240, 210,225); ctx.fill();
+    ctx.strokeStyle='#000'; ctx.lineWidth=1.5; ctx.stroke();
+    ctx.fillStyle='#000';
+    ctx.beginPath(); ctx.arc(162,210, 8, 0, Math.PI*2); ctx.fill();
+    ctx.beginPath(); ctx.arc(238,210, 8, 0, Math.PI*2); ctx.fill();
+  } else {
+    ctx.beginPath();
+    ctx.moveTo(140,215); ctx.quadraticCurveTo(165,200, 190,215); ctx.fill();
+    ctx.strokeStyle='#000'; ctx.lineWidth=1.5; ctx.stroke();
+    ctx.beginPath();
+    ctx.moveTo(210,215); ctx.quadraticCurveTo(235,200, 260,215); ctx.fill();
+    ctx.strokeStyle='#000'; ctx.lineWidth=1.5; ctx.stroke();
+    ctx.fillStyle='#000';
+    ctx.beginPath(); ctx.arc(165,212, 5, 0, Math.PI*2); ctx.fill();
+    ctx.beginPath(); ctx.arc(235,212, 5, 0, Math.PI*2); ctx.fill();
+  }
+
+  // ── ปาก ──
+  ctx.strokeStyle='#000'; ctx.lineWidth=2.5; ctx.lineCap='round';
+  ctx.beginPath();
+  if (maskState.char === 'nang') {
+    ctx.moveTo(180,305); ctx.quadraticCurveTo(200,315, 220,305);
+  } else {
+    ctx.moveTo(170,300); ctx.quadraticCurveTo(200,330, 230,300);
+  }
+  ctx.stroke();
+
+  // ── เขี้ยว (ยักษ์เท่านั้น) ──
+  if (maskState.char === 'giant') {
+    ctx.fillStyle='white';
+    ctx.beginPath(); ctx.moveTo(175,305); ctx.lineTo(170,325); ctx.lineTo(185,310); ctx.closePath(); ctx.fill();
+    ctx.strokeStyle='#000'; ctx.lineWidth=0.5; ctx.stroke();
+    ctx.beginPath(); ctx.moveTo(225,305); ctx.lineTo(230,325); ctx.lineTo(215,310); ctx.closePath(); ctx.fill();
+    ctx.strokeStyle='#000'; ctx.lineWidth=0.5; ctx.stroke();
+  }
+
+  ctx.restore();
+
+  // คืน Image object
+  const out = new Image();
+  out.src = c.toDataURL('image/png');
+  return new Promise(resolve => {
+    out.onload = () => resolve(out);
+    out.onerror = () => resolve(null);
+    if (out.complete) resolve(out);
+  });
+}
+
+/* ═══════════════════════
+   SVG → Image (ใช้ drawMaskToCanvas แทน btoa)
 ═══════════════════════ */
 function svgToImage(size=600) {
-  return new Promise(resolve => {
-    const svg = document.getElementById('main-svg');
-    const src = new XMLSerializer().serializeToString(svg);
-    const b64 = btoa(unescape(encodeURIComponent(src)));
-    const img = new Image();
-    img.onload = () => {
-      const c = document.createElement('canvas');
-      c.width = c.height = size;
-      c.getContext('2d').drawImage(img, 0, 0, size, size);
-      const out = new Image();
-      out.onload = () => resolve(out);
-      out.onerror = () => resolve(null);
-      out.src = c.toDataURL('image/png');
-    };
-    img.onerror = () => resolve(null);
-    img.src = 'data:image/svg+xml;base64,' + b64;
-  });
+  return drawMaskToCanvas(size);
 }
 
 /* ═══════════════════════
@@ -749,15 +891,12 @@ async function startAR() {
   overlay.width  = video.videoWidth  || 640;
   overlay.height = video.videoHeight || 480;
 
-  // สร้าง maskImg จาก SVG ณ ปัจจุบัน (ใช้หน้ากากที่ส่งมาจาก P2 หรือสร้างใหม่)
-  if (!maskImg) {
-    setStatus('🎨 สร้างหน้ากาก...');
-    maskImg = await svgToImage(600);
-  }
+  // ── สร้าง maskImg เสมอ (วาดจาก canvas โดยตรง ไม่ล้มเหลว) ──
+  setStatus('🎨 สร้างหน้ากาก...');
+  maskImg = await drawMaskToCanvas(600);
+  console.log('[startAR] maskImg:', maskImg ? `${maskImg.width}x${maskImg.height}` : 'NULL');
 
-  setStatus('⏳ โหลด Face Detection...');
-  const ok = await loadFaceApi();
-
+  // ── เริ่ม fallback loop ทันที ── 
   arRunning = true;
   document.getElementById('guide-svg').style.opacity = '0';
   document.getElementById('start-ar-btn').style.display  = 'none';
@@ -765,8 +904,20 @@ async function startAR() {
   document.getElementById('capture-ar-btn').style.display = '';
   document.getElementById('stop-ar-btn').style.display    = '';
 
-  if (ok) { setStatus('🟢 Face Tracking Active'); runTrackingLoop(); }
-  else    { setStatus('⚠️ Fallback mode — กลางจอ'); runFallbackLoop(); }
+  setStatus('🎭 หน้ากากพร้อม — กำลังโหลด Face Tracking...');
+  runFallbackLoop(); // เริ่มแสดงหน้ากากทันที
+
+  // ── พยายามโหลด face-api แบบ async (ถ้าสำเร็จค่อย upgrade) ──
+  loadFaceApi().then(ok => {
+    if (!arRunning) return;
+    if (ok) {
+      cancelAnimationFrame(rafId); rafId = null;
+      setStatus('🟢 Face Tracking Active');
+      runTrackingLoop();
+    } else {
+      setStatus('🎭 Fallback mode (หน้ากากกลางจอ)');
+    }
+  });
 }
 
 function runTrackingLoop() {
